Fixed overflow issues of Profile page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: none !important;
+  margin: 0 !important;
   padding: 2rem;
   text-align: center;
 }
